# piper-collect-data

./: .gitignore  README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/piper/share/piper/: package.sh
install/piper_description/share/piper_description/: local_setup.sh  package.sh
install/piper_gazebo/lib/piper_gazebo/: get_current_pose  moveit_demo  moveit_j  moveit_p
install/piper_gazebo/share/piper_gazebo/: local_setup.sh  package.sh
install/piper_gazebo/share/piper_gazebo/config/: ros2_controllers.yaml
install/piper_gazebo/share/piper_gazebo/launch/piper_with_gripper/: piper_gazebo.launch.py
install/piper_gazebo/share/piper_gazebo/scripts/: moveit_demo.cpp
install/piper_humble/share/piper_humble/: local_setup.sh  package.sh
install/piper_msgs/share/piper_msgs/: local_setup.sh  package.sh
install/piper_mujoco/share/piper_mujoco/: local_setup.sh  package.sh
install/piper_no_gripper_moveit/share/ament_index/resource_index/parent_prefix_path/: piper_no_gripper_moveit
install/piper_no_gripper_moveit/share/piper_no_gripper_moveit/: local_setup.sh  package.sh
install/piper_with_gripper_moveit/share/piper_with_gripper_moveit/: local_setup.sh  package.sh
install/piper_with_gripper_moveit/share/piper_with_gripper_moveit/config/: moveit_controllers.yaml  ros2_controllers.yaml
src/cube_description/: cube.sdf
src/piper_description/urdf/: piper_description.xacro  piper_description_gazebo.xacro
src/piper_moveit/piper_with_gripper_moveit/config/: ros2_controllers.yaml
src/piper_moveit/piper_with_gripper_moveit/launch/: demo.launch.py  piper_moveit.launch.py
src/piper_sim/piper_gazebo/: CMakeLists.txt  package.xml
src/piper_sim/piper_gazebo/config/: ros2_controllers.yaml
src/piper_sim/piper_gazebo/src/: get_current_pose.cpp  moveit_j.cpp  moveit_key.cpp  moveit_p.cpp  moveit_p_random.cpp
src/piper_sim/piper_gazebo/utils/: printplan.cpp  printplan.hpp
src/planning/: CMakeLists.txt  package.xml
src/planning/scripts/: spawn_cube.py
